Fixes for preformatted code block
* Reduced font size and margins

* Long (overflowing) lines do not wrap

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -167,21 +167,20 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
+  overflow: scroll;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
 }
 pre code {
   padding: 0;
-  font-size: 100%;
   color: inherit;
   background-color: transparent;
 }
 
 /* Pygments via Jekyll */
 .highlight {
-  margin-bottom: 1rem;
+  margin: 0pt;
   border-radius: 4px;
 }
 .highlight pre {
